# programa-entrevista-exati

./: CMakeLists.txt  README.md
include/: desenhador.hpp  semaforo.hpp  simulador.hpp  sincronizador.hpp
source/: desenhador.cpp  main.cpp  semaforo.cpp  simulador.cpp  sincronizador.cpp
